<resources>
    <string name="app_name">Week_3_Challenge_3_1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="results">Results</string>
    <string name="open_nav">open_nav</string>
    <string name="close_nav">close_nav</string>
    <string name="filters">Filters</string>
    <string name="login_signup_text">Fill in the credentials to Login or Sign-In with Google Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="login_signup">Login/Signup</string>
    <string name="home">Home</string>
    <string name="logout">LogOut</string>
    <string name="my_school">My School</string>
    <string name="create_attendance">Create Attendance</string>
    <string name="select_date">Selected Date</string>
    <string name="pick_date">Pick date</string>
    <string name="attendance_title">Attendance Title</string>
    <string name="create">Create</string>
    <string name="student_details">Student Details</string>
    <string name="login">Login</string>
    <string name="add_session_class">Add Session/Class</string>
    <string name="session_title">Session Title</string>
    <string name="class_title">Class Title</string>
    <string name="server_client_id">69778620966-oo4s489kdq1obekd4bfbjg1fnucp27us.apps.googleusercontent.com</string>
    <string name="student_list">Student List</string>
    <string name="add_attendance">Add Attendance</string>


</resources>